<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/str_face_image"
            app:layout_constraintEnd_toStartOf="@id/btn_detection"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_detection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/str_face_detection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_image"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_detection"
            app:layout_constraintVertical_bias="0" />

        <ImageView
            android:id="@+id/img_show"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:alpha="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_detection" />

        <com.mysafe.lib_identification.camera_view.FaceRectView
            android:id="@+id/rectView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_detection"
            app:layout_constraintVertical_bias="0" />

        <Button
            android:id="@+id/btn_transpose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/str_face_transpose"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/str_face_X"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_y"
            app:layout_constraintStart_toEndOf="@id/btn_transpose" />

        <Button
            android:id="@+id/btn_y"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/str_face_Y"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>